# BMSTU_CP_CG

./: .gitignore  CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  readme.md
cg_cp/: 51-biblio.bib  analizes.tex  conclusion.tex  ecsperem.tex  kinstruct.tex  report.tex  texnicheskaya.tex  vved.tex
connect/: handle_buttons.cpp  handle_buttons.h
doc/: readme.md
doc/tex/: 02-intro.tex  10-analysis.tex  20-design.tex  30-impl.tex  40-research.tex  50-conclusion.tex  51-biblio.bib  51-biblio.tex
model/3d_objects/: cube.cpp  cube.h  objects_settings.h  sphere.cpp  sphere.h  triangle_prism.cpp  triangle_prism.h
model/fractals/: Fractal.cpp  Fractal.h  Link.cpp  Link.h  Params.cpp  Params.h  Rules.cpp  Rules.h  consts.h  params_t.cpp  params_t.h  preset_settings.cpp  preset_settings.h
server/: change_factor_t.cpp  change_factor_t.h  color_t.cpp  color_t.h  light_source.cpp  light_source.h  screen_properties_t.cpp  screen_properties_t.h  screen_t.cpp  screen_t.h  shading.cpp  shading.h  triangle_t.cpp  triangle_t.h  triangle_vector.cpp  triangle_vector.h  vertex_t.cpp  vertex_t.h  z_buffer.cpp  z_buffer.h
tests/: all_tests.h  model_test.cpp  model_test.h  server_test.cpp  server_test.h
ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
